style: Change hover effect for shop-now and quty-update buttons to box-shadow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -433,11 +433,12 @@ footer ul {
     color: #fff;
     letter-spacing: 1.1px;
     text-transform: uppercase;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .btn-shop-now:hover {
     color: #fff;
-    transform: scale(1.02);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .add-wishlist {
