--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -7,7 +7,7 @@
 
 .btn-qty-update-bag:hover {
     color: #fff;
-    transform: scale(1.02);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .divder-bag {
