--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -13,11 +13,11 @@
                         <div id="mc_embed_signup_scroll">
                             <p>Sign up for our newsletter and be the first to know about new bikes and great deals.</p>
                             <div class="mc-field-group">
-                                <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
-                                </label>
+                                <label for="mce-EMAIL" hidden>Email Address</label>
                                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
-                                    required>
-                                <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                                    placeholder="your@email.com" required>
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                                    class="btn text-white rounded-0 upper">
                             </div>
                             <div id="mce-responses" class="clear foot">
                                 <div class="response" id="mce-error-response" style="display:none"></div>
@@ -28,8 +28,7 @@
                                     name="b_4295a0f76120d7987e7c8df0b_f6d62e62ea" tabindex="-1" value=""></div>
                             <div class="optionalParent">
                                 <div class="clear foot">
-                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-                                        class="btn btn-cta text-white border-0 rounded-0">
+                                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
                                 </div>
                             </div>
                         </div>
