style: Add Box Shadow to product-container

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -525,6 +525,7 @@ footer ul {
     position: relative;
     border: 1px solid #eaeaea;
     transition: border-color .3s;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
 }
 
 /*=============== Toast Messages ===============*/
