--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -8,7 +8,7 @@
     </div>
     <div class="toast-body bg-white rounded-bottom">
         <p class="mb-0">{{ message|safe }}</p>
-        {% if grand_total > 10  and not on_profile_page %}
+        {% if request.item_added %}
         <br>
         <p class="logo-font bg-white text-black mt-2 liner">Your Bag ({{ product_count }})&nbsp;</p>
         <div class="bag-notification-wrapper">
