--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -115,6 +115,10 @@
     transition: all 500ms;
 }
 
+.accordion-item {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
 .accordion-body table {
     width: fit-content;
 }
@@ -124,6 +128,11 @@
     background-color: #dfdfdf;
     box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
     border: #000 .6px solid;
+}
+
+.accordion-button.collapsed:hover {
+    background-color: #F0F0F0;
+    cursor: pointer;
 }
 
 .accordion-button:not(.collapsed)::after {
