style: Add hover effect for accordion buttons on FAQs accordion

--- a/support/static/support/css/support.css
+++ b/support/static/support/css/support.css
@@ -20,6 +20,11 @@
     transform: rotate(-180deg);
 }
 
+.accordion-button.collapsed:hover {
+    background-color: #f7f7f7;
+    cursor: pointer;
+}
+
 .accordion-body {
     background-color: #dfdfdf;
 }
