--- a/products/templates/products/components/product_accordion_detail_info_pdp.html
+++ b/products/templates/products/components/product_accordion_detail_info_pdp.html
@@ -1,10 +1,10 @@
 {% load humanize %}
 <div class="accordion my-5" id="accordionDetail">
     <!-- Product Description -->
-    <div class="accordion-item">
+    <div class="accordion-item rounded-0">
         <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                aria-expanded="true" aria-controls="collapseOne">
+            <button class="accordion-button rounded-0" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 Description
             </button>
         </h2>
@@ -62,9 +62,9 @@
         </div>
     </div>
     <!-- Product Reviews -->
-    <div class="accordion-item">
+    <div class="accordion-item rounded-0">
         <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            <button class="accordion-button collapsed rounded-0" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                 Reviews
             </button>
