style: Add margin to heading for top products

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -52,7 +52,7 @@ Find your Mountain for your adventure.
     <!-- Top Products-->
     <section>
         <div class="container-fluid px-4 pb-4">
-            <h2 class="liner upper">Top Products&nbsp;</h2>
+            <h2 class="liner upper mb-4">Top Products&nbsp;</h2>
             <div class="row top-products justify-content-center">
                 {% for product in top_rated_products|slice:":4" %}
                 <div
