--- a/products/templates/products/components/product_card.html
+++ b/products/templates/products/components/product_card.html
@@ -6,8 +6,8 @@
     {% endif %}
     <div class="product-image-container">
         {% if product.image %}
-        <a href="{% url 'product_detail' product.pk %}"><img class="product-img" src="{{ product.image.url }}"
-                alt="{{ product.title }}"></a>
+        <a href="{% url 'product_detail' product.pk %}"><img class="product-img"
+                src="{{ MEDIA_URL }}{{ product.image }}" alt="{{ product.title }}"></a>
         {% else %}
         <a href="{% url 'product_detail' product.pk %}"><img class="product-img"
                 src="{{ MEDIA_URL }}products/default-no-image.webp" alt="{{ product.title }}"></a>
