--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -134,7 +134,8 @@ Your Profile
                                 <div class="wishlist-image-container w-100">
                                     {% if item.product.image %}
                                     <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
-                                            src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
+                                            src="{{ MEDIA_URL }}{{ item.product.image }}"
+                                            alt="{{ item.product.title }}"></a>
                                     {% else %}
                                     <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
                                             src="{{ MEDIA_URL }}products/default-no-image.webp"
@@ -195,7 +196,8 @@ Your Profile
                                 <div class="product-image-container-review">
                                     {% if item.product.image %}
                                     <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
-                                            src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
+                                            src="{{ MEDIA_URL }}{{ item.product.image }}"
+                                            alt="{{ item.product.title }}"></a>
                                     {% else %}
                                     <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
                                             src="{{ MEDIA_URL }}products/default-no-image.webp"
