--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-3 my-1">
                     {% if item.product.image %}
-                    <img class="w-100" src="{{ item.product.image.url }}">
+                    <img class="w-100" src="{{ MEDIA_URL }}{{ item.product.image }}">
                     {% else %}
                     <img class="w-100" src="{{ MEDIA_URL }}products/default-no-image.webp">
                     {% endif %}
