feat: Add HTML Tag for Search Console Verification

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         content="Discover high-performance mountain bikes from top brands. Shop now for durable frames, advanced suspensions, and reliable components. Buy online today!">
     <meta name="keywords" content="Bikes, Mountainbikes">
     <meta name="author" content="Kerstin Weibeler">
+    <meta name="google-site-verification" content="dzRYMMetjbhvqtaQEcd2-xUGd3USb5U5zsozwPuJmMs" />
     {% endblock %}
 
     {% block extra_meta %}
