--- a/templates/components/auth_modal.html
+++ b/templates/components/auth_modal.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n socialaccount %}
 {% load crispy_forms_tags %}
 <!-- Log in / Sign Up Modal-->
 <div class="modal fade" id="auth-modal" tabindex="-1" role="dialog" aria-labelledby="auth-modal-label"
@@ -21,10 +21,16 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
+            {% get_providers as socialaccount_providers %}
             <div class="modal-body">
                 <!-- Tabs -->
                 <div class="tab-content">
                     <div class="tab-pane active" id="login" role="tabpanel">
+                        {% if socialaccount_providers%}
+                        <a href="{% provider_login_url 'google' %}" id="customButton" class="mb-4"><img
+                                src="{{ MEDIA_URL }}homepage-images/google-icon.png" alt="Google Logo"><span>Login with
+                                Google</span></a>
+                        {% endif %}
                         <form action="{% url 'account_login' %}?next={{request.path}}" method="post">
                             <input type="hidden" name="next" value="{{ request.GET.next }}" />
                             {% csrf_token %}
@@ -36,6 +42,11 @@
                         </form>
                     </div>
                     <div class="tab-pane" id="register" role="tabpanel">
+                        {% if socialaccount_providers%}
+                        <a href="{% provider_login_url 'google' %}" id="customButton" class="mb-4"><img
+                                src="{{ MEDIA_URL }}homepage-images/google-icon.png" alt="Google Logo"><span>Login with
+                                Google</span></a>
+                        {% endif %}
                         <form class="signup" id="signup_form" method="post"
                             action="{% url 'account_signup' %}?next={{request.path}}">
                             <input type="hidden" name="next" value="{{ request.GET.next }}" />
