feat: Create Privacy Policy and add it. Create a View for the Privacy Policy to render the template and wire it up in URLs. Create template for Privacy Policy and add the link to the footer

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -45,7 +45,7 @@
                 </ul>
                 <h3 class="upper">About Us</h3>
                 <ul>
-                    <li>Privacy Policy</li>
+                    <li><a href="{% url 'privacy_policy' %}" class="text-dark">Privacy Policy</a></li>
                     <li>Terms % Conditions</li>
                 </ul>
             </div>
