--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><a href="{% url 'contact' %}" class="text-dark">Contact Us</a></li>
                     <li><a href="{% url 'faq' %}" class="text-dark">FAQs</a></li>
-                    <li>Return Policy</li>
+                    <li><a href="{% url 'return_policy' %}" class="text-dark">Return Policy</a></li>
                 </ul>
                 <h3 class="upper">About Us</h3>
                 <ul>
