feat: Create TCs and add it. Create a View for TCs to render the template and wire it up ins urls. Create a template and add the link to the footer

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -46,7 +46,7 @@
                 <h3 class="upper">About Us</h3>
                 <ul>
                     <li><a href="{% url 'privacy_policy' %}" class="text-dark">Privacy Policy</a></li>
-                    <li>Terms % Conditions</li>
+                    <li><a href="{% url 'terms_and_conditions' %}" class="text-dark">Terms & Conditions</a></li>
                 </ul>
             </div>
         </div>
