feat: Create Add to shopping bag functionality with event listeners and form data submission. Add a new script to handles functionality for adding items to the shopping bag. The script defines an addToShoppingBag object that has several functions to handle different aspects of the functionality, such as creating form data and sending a request.

--- a/products/templates/products/components/add_to_cart_qty_1.html
+++ b/products/templates/products/components/add_to_cart_qty_1.html
@@ -1,9 +1,6 @@
-<form class="form" action="{% url 'add_to_bag' product.id %}?{{ request.GET.urlencode }}" method="POST">
-    {% csrf_token %}
-    <input class="form-control qty_input" type="number" name="quantity" value="1" style="display:none;"
-        aria-label="Add 1 to shopping bag" required>
-    <input type="hidden" name="redirect_url" value="{{ request.path }}">
-    <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
+<form class="form add-to-bag-form" data-product-id="{{ product.id }}" data-quantity="1">
+    <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end"
+        id="add-to-bag-btn-qty-{{ product.id }}">
         <i class="fa-solid fa-cart-shopping"></i> Add to Bag
     </button>
 </form>
