--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -1,7 +1,7 @@
 <!-- Add Product to Bag-->
 <div class="d-flex align-items-end">
     <div class="d-flex align-items-center">
-        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+        <form class="form add-to-bag-form" data-product-id="{{ product.id }}" data-quantity="1" method="POST">
             {% csrf_token %}
             <div class="form-row">
                 <div class="col-12">
@@ -32,7 +32,8 @@
                     <!-- Add to Bag -->
                     <div class="d-flex align-items-center">
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
+                        <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end"
+                            id="add-to-bag-btn">
                             <i class="fa-solid fa-cart-shopping"></i> Add to Bag
                         </button>
                     </div>
