--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -139,7 +139,8 @@
                         <i class="fa-solid fa-bag-shopping fs-4 position-relative mx-2">
                             {% if product_count > 0 %}
                             <span
-                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-orange">
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-orange"
+                                id="qty-in-bag">
                                 {{ product_count }}
                                 <span class="visually-hidden">Items in bag</span>
                             </span>
