feat: Change add_product_to_bag script to check for #add-to-bag-btn. With this if statetment the to code is reusable on the PDP, CLP as well as on the index page, even if a regular add-to-bag-btn is not available on a page. The script has been added to the CLP and index page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -65,3 +65,9 @@ Find your Mountain for your adventure.
     </section>
 </main>
 {% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<!-- Products JS -->
+{% include 'products/components/add_product_to_bag_script.html' %}
+{% endblock %}
