--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -68,4 +68,5 @@ Our Mountainbikes
 <!-- Products JS -->
 <script src="{% static 'products/js/back_to_top.js' %}"></script>
 <script src="{% static 'products/js/filters.js' %}"></script>
+{% include 'products/components/add_product_to_bag_script.html' %}
 {% endblock %}
