feat: Make badge for bag hidden and remove hidden with JS when product has been added

--- a/products/templates/products/components/add_product_to_bag_script.html
+++ b/products/templates/products/components/add_product_to_bag_script.html
@@ -41,6 +41,9 @@
             const bagQuantityElement = document.querySelector('#qty-in-bag');
             if (bagQuantityElement) {
                 bagQuantityElement.textContent = totalQuantity;
+                if (totalQuantity > 0) {
+                    bagQuantityElement.classList.remove('visually-hidden');
+                }
             }
         },
 
