feat: Include bag_offcanvas template in base.html and link it in the navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,8 @@
     {% include 'components/footer.html' %}
     {% include 'components/scripts.html' %}
     {% include "components/auth_modal.html" %}
+    {% include "components/bag_offcanvas.html" %}
+    </div>
     {% block postloadjs %}
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', () => {
