style: Change styling on bag offcanvas

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -562,7 +562,7 @@ footer ul {
 }
 
 .bag-notification-wrapper {
-    max-height: 100px;
+    max-height: 70vh;
     overflow-x: hidden;
     overflow-y: auto;
 }
