--- a/templates/components/bag_offcanvas.html
+++ b/templates/components/bag_offcanvas.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% load bag_tools %}
 <!-- Offcanvas for bag contents -->
 <div id="bag-contents">
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasBag" aria-labelledby="offcanvasRightLabel">
@@ -7,10 +8,10 @@
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <p class="logo-font bg-white text-black mt-2 liner">Your Bag ({{ product_count }})&nbsp;</p>
+            <p class="logo-font bg-white text-black mt-2 liner">Your Bikes ({{ product_count }})&nbsp;</p>
             <div class="bag-notification-wrapper">
                 {% for item in bag_items %}
-                <div class="row">
+                <div class="row mb-3">
                     <div class="col-3 my-1">
                         {% if item.product.image %}
                         <img class="w-100" src="{{ MEDIA_URL }}{{ item.product.image }}">
@@ -21,6 +22,13 @@
                     <div class="col-9">
                         <p class="my-0"><strong>{{ item.product.title }}</strong></p>
                         <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                        {% if item.product.sale %}
+                        <p class="">Total:
+                            {{ item.product.sale_price | multiply_price_by_quantity:item.quantity |intcomma}}€</p>
+                        {% else %}
+                        <p class="my-0 small">Total:
+                            {{ item.product.retail_price| multiply_price_by_quantity:item.quantity|intcomma  }}€</p>
+                        {% endif %}
                     </div>
                 </div>
                 {% endfor %}
@@ -28,8 +36,8 @@
             <div class="row">
                 <div class="col">
                     <strong>
-                        <p class="mt-3 mb-1 text-black">
-                            Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
+                        <p class="mt-3 mb-3 text-black">
+                            Order Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
                             <span class="float-right">{{ total|intcomma }}&nbsp;€</span>
                         </p>
                     </strong>
@@ -39,8 +47,12 @@
                         delivery!
                     </p>
                     {% endif %}
-                    <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0 w-100">
-                        <span class="btn btn-shop-now bg-orange text-center">Place your Order!</span>
+                    <a href="{% url 'checkout' %}" class="btn rounded-0 w-100 mb-2">
+                        <span class="btn btn-shop-now bg-orange text-center w-100">Place your Order!</span>
+                    </a>
+                    <a href="{% url 'view_bag' %}"
+                        class="btn btn btn-outline-dark rounded-0 w-50 text-center d-block mx-auto">
+                        <span class="text-center">Go to Shopping Bag!</span>
                     </a>
                 </div>
             </div>
