--- a/templates/components/bag_offcanvas.html
+++ b/templates/components/bag_offcanvas.html
@@ -10,6 +10,7 @@
         <div class="offcanvas-body">
             <p class="logo-font bg-white text-black mt-2 liner">Your Bikes ({{ product_count }})&nbsp;</p>
             <div class="bag-notification-wrapper">
+                {% if bag_items %}
                 {% for item in bag_items %}
                 <div class="row mb-3">
                     <div class="col-3 my-1">
@@ -56,6 +57,12 @@
                     </a>
                 </div>
             </div>
+            {% else %}
+            <div>
+                <p>You don't have any products in your bag, yet.</p>
+                <button class="btn btn-cta upper w-100"><a href="{% url 'products' %}">Find a Bike</a></button>
+            </div>
+            {% endif %}
         </div>
     </div>
 </div>
