feat: Add error handling for non-existent product in AddToBagView. Updated the  method in  to check if the item exists before adding it to the bag. If the item does not exist, a JSON response with an error message is returned. Updated the JavaScript code to handle the error response and display the error message. Added an error container element to the HTML file and updated the JavaScript code to display the error message in the container.Styled the error container with CSS.

--- a/products/templates/products/components/product_card.html
+++ b/products/templates/products/components/product_card.html
@@ -31,7 +31,7 @@
         {% else %}
         <p class="price">{{ product.retail_price|intcomma }}€</p>
         {% endif %}
-
+        <div id="error-container-bag" class="error-container"></div>
         <div class="d-flex justify-content-center">
             {% include 'products/components/add_to_cart_qty_1.html' %}
             {% if user.is_authenticated %}
