--- a/products/templates/products/components/add_product_to_bag_script.html
+++ b/products/templates/products/components/add_product_to_bag_script.html
@@ -18,8 +18,16 @@
                 // Update teh Bag Content for the off-canvas
                 this.updateBagContents(responseData.bag_contents);
             } else {
-                alert('There was an error adding to the bag.');
+                const errorData = await response.json();
+                if (errorData && errorData.error) {
+                    const errorContainer = document.getElementById('error-container-bag');
+                    errorContainer.innerHTML = errorData.error; // Display the error message
+                    errorContainer.style.display = 'block';
+                } else {
+                    alert('There was an error adding to the bag.');
+                }
             }
+
         },
 
         // Function to create form data
@@ -37,7 +45,8 @@
                 method: 'POST',
                 body: formData,
                 headers: {
-                    'X-CSRFToken': document.querySelector('input[name="csrfmiddlewaretoken"]').value
+                    'X-CSRFToken': document.querySelector('input[name="csrfmiddlewaretoken"]')
+                        .value
                 }
             });
         },
@@ -56,7 +65,8 @@
         // Function to update the add button to indicate that the item has been added to bag
         updateAddButton: function (addButton) {
             const addButtonWidth = addButton.get(0).getBoundingClientRect().width;
-            addButton.html('<i class="fa-solid fa-check"></i> Added').css('width', `${addButtonWidth}px`);
+            addButton.html('<i class="fa-solid fa-check"></i> Added').css('width',
+                `${addButtonWidth}px`);
         },
 
         // Function to initialize the add to bag functionality
